finally got rid of a bug

--- a/image-classification/dlnd_image_classification.ipynb
+++ b/image-classification/dlnd_image_classification.ipynb
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 79,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -818,7 +818,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".Tests Passed\n"
+      "Tests Passed\n"
      ]
     }
    ],
@@ -836,24 +836,6 @@
     "    : label_batch: Batch of Numpy label data\n",
     "    \"\"\"\n",
     "    # TODO: Implement Function\n",
-    "    # tf Graph input\n",
-    "\n",
-    "    # Model\n",
-    "    logits = conv_net(x, keep_prob)\n",
-    "    \n",
-    "    # Define loss and optimizer\n",
-    "    #cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=logits, labels=y))\n",
-    "    #print('train neural net ***|',  optimizer, '|', keep_probability, '|***' )\n",
-    "    #optimizer = tf.train.GradientDescentOptimizer(learning_rate=learning_rate).minimize(cost)\n",
-    "    #optimizer.minimize(cost)\n",
-    "    \n",
-    "    print('.', end='')\n",
-    "    global num_pdots, max_dots\n",
-    "    num_pdots += 1\n",
-    "    if num_pdots >= max_dots:\n",
-    "        print('')\n",
-    "        num_pdots = 0\n",
-    "\n",
     "    # Launch the graph\n",
     "    session.run(optimizer, feed_dict={\n",
     "        x: feature_batch,\n",
@@ -881,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 86,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -935,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 73,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -962,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -974,62 +956,25 @@
      "output_type": "stream",
      "text": [
       "Checking the Training on a Single Batch...\n",
-      "..................................................\n",
-      ".....................\n",
-      "Epoch  1, CIFAR-10 Batch 1:  Loss:     2.1643 Validation Accuracy: 0.287000\n",
-      ".............................\n",
-      "..........................................\n",
-      "Epoch  2, CIFAR-10 Batch 1:  Loss:     2.1426 Validation Accuracy: 0.349400\n",
-      "........\n",
-      "..................................................\n",
-      ".............\n",
-      "Epoch  3, CIFAR-10 Batch 1:  Loss:     1.9691 Validation Accuracy: 0.397000\n",
-      ".....................................\n",
-      "..................................\n",
-      "Epoch  4, CIFAR-10 Batch 1:  Loss:     1.9181 Validation Accuracy: 0.408200\n",
-      "................\n",
-      "..................................................\n",
-      ".....\n",
-      "Epoch  5, CIFAR-10 Batch 1:  Loss:     1.8537 Validation Accuracy: 0.440400\n",
-      ".............................................\n",
-      "..........................\n",
-      "Epoch  6, CIFAR-10 Batch 1:  Loss:     1.7838 Validation Accuracy: 0.448000\n",
-      "........................\n",
-      "...............................................\n",
-      "Epoch  7, CIFAR-10 Batch 1:  Loss:     1.7411 Validation Accuracy: 0.464600\n",
-      "...\n",
-      "..................................................\n",
-      "..................\n",
-      "Epoch  8, CIFAR-10 Batch 1:  Loss:     1.6593 Validation Accuracy: 0.466600\n",
-      "................................\n",
-      ".......................................\n",
-      "Epoch  9, CIFAR-10 Batch 1:  Loss:     1.6248 Validation Accuracy: 0.471400\n",
-      "...........\n",
-      "..................................................\n",
-      "..........\n",
-      "Epoch 10, CIFAR-10 Batch 1:  Loss:     1.5299 Validation Accuracy: 0.475000\n",
-      "........................................\n",
-      "...............................\n",
-      "Epoch 11, CIFAR-10 Batch 1:  Loss:     1.4720 Validation Accuracy: 0.489000\n",
-      "...................\n",
-      "..................................................\n",
-      "..\n",
-      "Epoch 12, CIFAR-10 Batch 1:  Loss:     1.4833 Validation Accuracy: 0.492000\n",
-      "................................................\n",
-      ".......................\n",
-      "Epoch 13, CIFAR-10 Batch 1:  Loss:     1.3980 Validation Accuracy: 0.499200\n",
-      "...........................\n",
-      "............................................\n",
-      "Epoch 14, CIFAR-10 Batch 1:  Loss:     1.3824 Validation Accuracy: 0.502000\n",
-      "......\n",
-      "..................................................\n",
-      "...............\n",
-      "Epoch 15, CIFAR-10 Batch 1:  Loss:     1.3612 Validation Accuracy: 0.503400\n"
+      "Epoch  1, CIFAR-10 Batch 1:  Loss:     2.1223 Validation Accuracy: 0.276000\n",
+      "Epoch  2, CIFAR-10 Batch 1:  Loss:     2.0305 Validation Accuracy: 0.339000\n",
+      "Epoch  3, CIFAR-10 Batch 1:  Loss:     1.9745 Validation Accuracy: 0.403800\n",
+      "Epoch  4, CIFAR-10 Batch 1:  Loss:     1.9078 Validation Accuracy: 0.405800\n",
+      "Epoch  5, CIFAR-10 Batch 1:  Loss:     1.8731 Validation Accuracy: 0.429200\n",
+      "Epoch  6, CIFAR-10 Batch 1:  Loss:     1.7803 Validation Accuracy: 0.445200\n",
+      "Epoch  7, CIFAR-10 Batch 1:  Loss:     1.7023 Validation Accuracy: 0.455000\n",
+      "Epoch  8, CIFAR-10 Batch 1:  Loss:     1.6713 Validation Accuracy: 0.450200\n",
+      "Epoch  9, CIFAR-10 Batch 1:  Loss:     1.6177 Validation Accuracy: 0.465600\n",
+      "Epoch 10, CIFAR-10 Batch 1:  Loss:     1.5750 Validation Accuracy: 0.476000\n",
+      "Epoch 11, CIFAR-10 Batch 1:  Loss:     1.6112 Validation Accuracy: 0.479000\n",
+      "Epoch 12, CIFAR-10 Batch 1:  Loss:     1.4496 Validation Accuracy: 0.492800\n",
+      "Epoch 13, CIFAR-10 Batch 1:  Loss:     1.4634 Validation Accuracy: 0.507400\n",
+      "Epoch 14, CIFAR-10 Batch 1:  Loss:     1.3997 Validation Accuracy: 0.505600\n",
+      "Epoch 15, CIFAR-10 Batch 1:  Loss:     1.3297 Validation Accuracy: 0.507000\n"
      ]
     }
    ],
    "source": [
-    "num_pdots = 0\n",
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
     "\"\"\"\n",
@@ -1043,7 +988,6 @@
     "        batch_i = 1\n",
     "        for batch_features, batch_labels in helper.load_preprocess_training_batch(batch_i, batch_size):\n",
     "            train_neural_network(sess, optimizer, keep_probability, batch_features, batch_labels)\n",
-    "        print('')\n",
     "        print('Epoch {:>2}, CIFAR-10 Batch {}:  '.format(epoch + 1, batch_i), end='')\n",
     "        print_stats(sess, batch_features, batch_labels, cost, accuracy)"
    ]
@@ -1073,24 +1017,23 @@
      "output_type": "stream",
      "text": [
       "Training...\n",
-      "...................................\n",
-      "....................................\n",
-      "Epoch  1, CIFAR-10 Batch 1:  Loss:     2.2366 Validation Accuracy: 0.225000\n",
-      "..............\n",
-      "..................................................\n",
-      ".......\n",
-      "Epoch  1, CIFAR-10 Batch 2:  Loss:     1.9582 Validation Accuracy: 0.327600\n",
-      "...........................................\n",
-      "............................\n",
-      "Epoch  1, CIFAR-10 Batch 3:  Loss:     1.6608 Validation Accuracy: 0.368800\n",
-      "......................\n",
-      ".................................................\n",
-      "Epoch  1, CIFAR-10 Batch 4:  Loss:     1.6742 Validation Accuracy: 0.385200\n",
-      ".\n",
-      "..................................................\n",
-      "....................\n",
-      "Epoch  1, CIFAR-10 Batch 5:  Loss:     1.7031 Validation Accuracy: 0.406000\n",
-      ".."
+      "Epoch  1, CIFAR-10 Batch 1:  Loss:     2.1561 Validation Accuracy: 0.240000\n",
+      "Epoch  1, CIFAR-10 Batch 2:  Loss:     1.8997 Validation Accuracy: 0.335400\n",
+      "Epoch  1, CIFAR-10 Batch 3:  Loss:     1.6451 Validation Accuracy: 0.370200\n",
+      "Epoch  1, CIFAR-10 Batch 4:  Loss:     1.6914 Validation Accuracy: 0.406600\n",
+      "Epoch  1, CIFAR-10 Batch 5:  Loss:     1.7103 Validation Accuracy: 0.405600\n",
+      "Epoch  2, CIFAR-10 Batch 1:  Loss:     1.9100 Validation Accuracy: 0.423400\n",
+      "Epoch  2, CIFAR-10 Batch 2:  Loss:     1.6421 Validation Accuracy: 0.450800\n",
+      "Epoch  2, CIFAR-10 Batch 3:  Loss:     1.4428 Validation Accuracy: 0.454400\n",
+      "Epoch  2, CIFAR-10 Batch 4:  Loss:     1.5829 Validation Accuracy: 0.460800\n",
+      "Epoch  2, CIFAR-10 Batch 5:  Loss:     1.5349 Validation Accuracy: 0.472600\n",
+      "Epoch  3, CIFAR-10 Batch 1:  Loss:     1.8020 Validation Accuracy: 0.483200\n",
+      "Epoch  3, CIFAR-10 Batch 2:  Loss:     1.4874 Validation Accuracy: 0.486000\n",
+      "Epoch  3, CIFAR-10 Batch 3:  Loss:     1.2379 Validation Accuracy: 0.474600\n",
+      "Epoch  3, CIFAR-10 Batch 4:  Loss:     1.4931 Validation Accuracy: 0.483200\n",
+      "Epoch  3, CIFAR-10 Batch 5:  Loss:     1.4557 Validation Accuracy: 0.506600\n",
+      "Epoch  4, CIFAR-10 Batch 1:  Loss:     1.6470 Validation Accuracy: 0.502200\n",
+      "Epoch  4, CIFAR-10 Batch 2:  Loss:     1.4042 Validation Accuracy: 0.501600\n"
      ]
     }
    ],
@@ -1112,7 +1055,6 @@
     "        for batch_i in range(1, n_batches + 1):\n",
     "            for batch_features, batch_labels in helper.load_preprocess_training_batch(batch_i, batch_size):\n",
     "                train_neural_network(sess, optimizer, keep_probability, batch_features, batch_labels)\n",
-    "            print('')\n",
     "            print('Epoch {:>2}, CIFAR-10 Batch {}:  '.format(epoch + 1, batch_i), end='')\n",
     "            print_stats(sess, batch_features, batch_labels, cost, accuracy)\n",
     "            \n",
