--- a/image-classification/dlnd_image_classification.ipynb
+++ b/image-classification/dlnd_image_classification.ipynb
@@ -16,20 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "CIFAR-10 Dataset: 171MB [00:25, 6.56MB/s]                              \n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -108,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -135,7 +128,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAfoAAAH0CAYAAADVH+85AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAAWJQAAFiUBSVIk8AAAGjlJREFUeJzt3cuuJGe6FuA/IjLXsc4Hu9pV5bLduE+b7qZRq8UAITFE\nzLgIrgSm+wK4CgZIzNEeILTZmN3sPtm47faxzq5aVatqrZUZwaCZIDH5X622pU/PM//0ZUZG/G/G\n6B2WZWkAQE3jd/0BAIC/HEEPAIUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0AFCboAaAwQQ8AhQl6\nAChM0ANAYYIeAAoT9ABQmKAHgMIEPQAUJugBoLDVd/0B/lKe/u5/Lsncanene+bF0yfJqvblHz/u\nnjl6dhTtOjt5Hc1tzk67Z548ex7t+vsP+6/Hn764H+1669rlaO792ze6Z1brKdq1GvpnxvCv+zxv\nu2eyb9Xasu3f1Vpr49h/QaYpuyA7wVy6K3/b6j/ihmCG/5/+e/Fszq79v/l3/yE4Cf5f3ugBoDBB\nDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGGCHgAKK9te15aw\npSmYW+3uZqum/v6vv//wf0e7Lu2uo7mDdf8t8tuPPol2ffHVw+6ZuzevRbt+cPfNaG5qZ90zR8+y\ndsP17l73zO5e/0xrrR3s9N8fS9jGtYQVe8Hj0tZxe13/sjH8XkkrX2stKa9rS9BS+Gdz98QwZNdj\nCc/uZCqNiaQmcgqfl/PgjR4AChP0AFCYoAeAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGGCHgAKE/QA\nUJigB4DCBD0AFFa31CbsiRiCloP1zk606ywoOfiHP30e7Zq2WZnF7tJfZvHy6EW0671b/QU1t25e\njnYdnb6O5p487S+oOXnxLNr1vVvf65453fb/Xq21tj3pL+u5cXE/2rXZbKK5nan/uFqts3eZ1dR/\ngExhOc0cXo+z5/331cuX2bP5Yugv+dm7cDHadf3wMJobkusfFu8MQenRED6b58EbPQAUJugBoDBB\nDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGF12+tCS9BeN479\nTUattbZe73bPrPazxrC/+4ffRXPboOXt+mH2GZ8v/Q1qH3z1ZbTr2auTaG4z97cA3rt5I9r1L//x\nz7pnHr84jnb94aMPu2cOdrPWxpuHe9HcHLyWjGGjXFBe15awEfHk8YNo7sGTb/pnzrIjf7l0vXvm\njaH/fGuttcth9ejeuv+7DS07u4ex/2acm/Y6AOAvQNADQGGCHgAKE/QAUJigB4DCBD0AFCboAaAw\nQQ8AhQl6AChM0ANAYYIeAAoT9ABQWNlSm9cvXkZz+0FRxxIWZwxzf8nBzrzJdi39ZSyttXbW+kt+\nvg6v/VdH2dy3aW/dX4JxZT8rcblx/Wr3zM2770W7Pv70T90z/+UPH0e77ly5HM39+F5/scrNCwfR\nrvmkv2Dp1cOvo12fPXoWzT2cDrtn7v3kJ9Gud+6+3T2zPX4a7do8exzNDVN/nI1Ldna3oNRm7D9K\nz403egAoTNADQGGCHgAKE/QAUJigB4DCBD0AFCboAaAwQQ8AhQl6AChM0ANAYYIeAAoT9ABQmKAH\ngMLKttf9zb//62hud9XfTrYJWpNaa+34oL/O6M58HO367PJ+NPfpk/7Wu3mTNeUtrb/Nr4XlU0vY\nWrUzrbtnrl/sbxlrrbVXx6+6Z374/j+Jdr17993umQ8+/jTa9bcf/y6b+/RS98y//vHtaNe1pf/a\nP37yTbTry03WsPfDn/6ie+af/qJ/prXWXr543j3z6PEX0a7Dnf4G0dZaG4KzewjPgWRsHMLD6hx4\noweAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0AFCboAaAwQQ8AhQl6ACis\nbHvdlbevRHPL0t8od3zyOtp1/VL/5f/p+z+Ldr359bNo7j/99993z3z05cNo17wJ2uv6f67/O5YN\nXrrY3zT28x/9o2zXwYXumc8+/yza9enjB90zXz/NmhQvX+z/Xq21dv+o/zn7jx98Eu1647D/2Xz0\nOrh/W2vvv305mrv79jvdM2l/2vHzJ90ze7tZC91qya7jMvQ/00N6Rcb+d+RlDA+rc+CNHgAKE/QA\nUJigB4DCBD0AFCboAaAwQQ8AhQl6AChM0ANAYYIeAAoT9ABQmKAHgMIEPQAUVrbU5u1/8VfhZH/x\nwOnLl9GmZ0/6i2b2b92Ldv3qnf1o7sMnr7pnPrn/NNq1BGUW87yNdq2G7D/u5uy0e+bXv/9dtOvh\no0fdM795eBTt+s2nX3XPXLt6Ldq1WbLfbNrZ6555NWdFIp+e9c+s19k99fVRdn783a9/3T3z8/du\nR7su7fbPzHvraNfm9CSaW+b+gpplyEpthqD8bLvdRLvOgzd6AChM0ANAYYIeAAoT9ABQmKAHgMIE\nPQAUJugBoDBBDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeAwsq21718+jiaW039/33mTX/rWmutff3g\nYffMau9CtOvW+z+J5u69fbd75o0PP4l2fXG//3qMY/ZfdZqmaO7VaX/z2n/7wxfRrvXO190zj476\n2/Vaa21a9R8F165einatjl9Hc1+/Ou4fGrP2uv11//XYWWX31P0n30Rz//m//m33zJdffBLt+tX3\nv9c9c+v6lWjXaspa71br/rklK69rQ+sfTBszz4M3egAoTNADQGGCHgAKE/QAUJigB4DCBD0AFCbo\nAaAwQQ8AhQl6AChM0ANAYYIeAAoT9ABQWNlSm2V7Fs3NS38xxRyWFVwPSh+OHmQFKTv7e9HcD+68\n0T3zo/f6i3Baa+3+w0fdM5s5Ky3ZzlkR0em2v9Rmb2cn2rWd+4szjl5nhTH33rzePbMbFEC11trB\nQTZ33A66Z4awtGQn+IiH+4fZsuDMaa21py9edM+cZo9LW+/td8+Mq+y+H4NymtZam9b9+4bw7B6C\nMq1pCS/+OfBGDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGGC\nHgAKE/QAUFjZ9roWthK1qb85aWlZK9GlK/3tdSd7u9Gux48eRnMv2vP+odOsQW0naa3aZC1005TV\nmk3r/kdmZ53di29d6G8Mu3GQPdI/uHu7e+bxabSqfX7/ZTR3Yb+/vW4btA221to897dfXrnY//la\na+3ibtZed/Owf+7H9+5Eu9663T83htWBSTNca62Nwdw4Ztc+ar2bs3vxPHijB4DCBD0AFCboAaAw\nQQ8AhQl6AChM0ANAYYIeAAoT9ABQmKAHgMIEPQAUJugBoDBBDwCFCXoAKKxue13aSjT2Ny6Nc9bS\nlLTe7R5cjHadrLLPuHnyTffMzslxtOswuBs34bVvWeld22423TN7lw6jXT97t79R7mdvXY12jQd7\n3TP/68PPo13r0wvR3JfP+lvvzjZZY9ita5e6Z96/nLXXvXe7/3durbVxp/832z28HO3aCZoD5234\nkKWS9rrVt9heF7Y9ngdv9ABQmKAHgMIEPQAUJugBoDBBDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeA\nwgQ9ABQm6AGgsLKlNtNqHc2NU3/JwTKEpTZJMUL43+ziYVbecPK8v3jnanhXXdrp/80ev3oV7Zq3\n/d+rtdbGTf91PJ2zXa+D2+p4yXZ989Wj7plPHjyOdr0Kj505eDaj8pHW2tL6d70Ky5zuP8nOjwev\n+3/rmzezkp+/OugvtRmn7NqP6Xka3Pvho9mC7rM2BKU758UbPQAUJugBoDBBDwCFCXoAKEzQA0Bh\ngh4AChP0AFCYoAeAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGFl2+vG9W42N/VfktWYtnH1/8+aw/9m\naUvTtbfudM/8/MrNaNfm8sfdM0cf/Dba9c3L02hunvtnHj45inb95pPPumdWYXvd6+OX3TN/8/H9\naNet69eiuc0maF7LitDaZ0/6m/lenOxFu5avn0RzD571Nzf+s59mZ9WP37nbPTOGzYEtbHmbkn1J\nDV1rrSUNe2N4CJ8Db/QAUJigB4DCBD0AFCboAaAwQQ8AhQl6AChM0ANAYYIeAAoT9ABQmKAHgMIE\nPQAUJugBoLC6pTarrGBivbPunhnCEoY5aNzYLNmuIWz3uLB30D1z9XpWKLRa99+OT559E+36zScP\nork7Ny50z3zx7Dja9eH9p90z2+0U7frn77/ZPXP9QvY7vzrdRHO7q/7vdulgP9r18uR198zjo5No\n12YJmpJaa9cv9X+3t67137+ttTat+8/FccruxSmcy87hsGgmKY8KC6fOgzd6AChM0ANAYYIeAAoT\n9ABQmKAHgMIEPQAUJugBoDBBDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeAwsq21+0dZi1N49T/32cJ\nG5CSRrlhzlrotmF7XRv657bZpna4u9M9c/NC1lI4h41hBzv9n/Ff/fJetOvDLx91z/z+T19Hu968\ne7t75t/+8EfRrt/+4eNobnN62j1z+dKlaNeXj551z/z6j19Euy6EDXu//NHd7pm7t65Fu5KGvWns\nb7xrrbVhzNrrsra87OxOzvzxuyuv80YPAJUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0AFCboAaAw\nQQ8AhQl6AChM0ANAYYIeAAorW2ozjNlXW63759KClCUptVmycpplm5Y3BJ9xDIt3zk66Z948zEpt\nfvrunWju0yfPu2dO/vhltOvOmze6Z25evxjt+ujT+90z776d3VOb18fR3PbkrHtmOOgvIWqttWns\n3/Xenf7fq7XW7r55PZr7/u1b3TN7h9n9MQ/9hTFLWE7TxvD9c+ifCzq7WmutTcFn3GYxcS680QNA\nYYIeAAoT9ABQmKAHgMIEPQAUJugBoDBBDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeAwgQ9ABRWtr1u\nXK+juWm92z8TViDNc3+dUdYX1towZ5NR41L4IcfW33Z1L2jwaq21n/3yrWjui0dPumd+99Efo11P\nj151z9y6eSXadfLsqHvmf3zwm2jXdsqOnWnd31R49Lq/ha611n7y/vvdMzcuH0a7DlZhy9vUf1bN\nuwfRqnEnaIkcszN4CO+PcQra69q3WSn33b1Xe6MHgMIEPQAUJugBoDBBDwCFCXoAKEzQA0Bhgh4A\nChP0AFCYoAeAwgQ9ABQm6AGgMEEPAIUJegAorGx73RC00P15bqd7Zhyy/0vj8u21143h4Nm2f3AT\nVd61tm1BC+CSfbFrF4M2rtba2zfvdc/86r0b0a4XL/sb5dK2tmXub1D740cfR7veuJU1Do57/c/0\n3t5+tGv/4GL3zDp8bToNnrHWWjsd+s+qZZVdj5Y0yoVnTng5ooXTmDUHJj/1uPru4tYbPQAUJugB\noDBBDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeAwgQ9ABQm6AGgMEEPAIUJegAorGypTdz+EpSkxB0M\nQRlOUPvSWmttGsPJof/bzdtttOpss+meefH8WbTr+VefR3PT1f6ykyFsOxnG/tKSaScrLTlu6+6Z\nq2+9E+3ayfqE2rXD/lKb/f1s2WZ70j0zh20s29Nsbg5KUpJumtZaG77Fc3ETTp7N/Wdc+hmnKSjD\nUWoDAPwlCHoAKEzQA0Bhgh4AChP0AFCYoAeAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGGCHgAKE/QA\nUFjZ9rq05S1plJvW2WVchvhT9u8K2qdaa22a+ufWQ3/LWGutvXnzWv/M7mm06+Ag+83GZe6emddX\nol3HY3+j3NnBYbRrHTwxBwf9v1drrW03r6O552cvumf2pv4GwNZaGzbH3TPrKXtv2tvLnpc2JPdw\n//2bGsOqvCF8/zzd9Ldmvn6d3Ys7O9l99V3xRg8AhQl6AChM0ANAYYIeAAoT9ABQmKAHgMIEPQAU\nJugBoDBBDwCFCXoAKEzQA0Bhgh4ACitbajPu7EVzq93+uXHqLx/JZeU0y5yVWcxLf1FE2PHT2uHF\n7pGpnUSrdlebaC7ozWhLywowVsE9vFpnBSlT8Du3nSnaNawuRXPHR0HJT3h/DEHJz+bsLNq1hOUv\n09R//ecxe7cbggKucQiLtMKyr6RcLKu0yaqB0mKx8+CNHgAKE/QAUJigB4DCBD0AFCboAaAwQQ8A\nhQl6AChM0ANAYYIeAAoT9ABQmKAHgMIEPQAUJugBoLC67XXrrL1unPqbxpIWqdZaVEQ3L1kLXRuz\nRqjV0P/d4o6mw/5Ws9OTF9Gq7dEX0dwQXY+s3XB17U73zLQTPtLb/v/86e88rbM2v8ML/ffH5sWj\naFc77X/Ozp4/jlaNh1ejuenqte6ZIWw3TIropiF7j1ySJsXWWgvOxv2d7F7cBNfj5UnWpHgevNED\nQGGCHgAKE/QAUJigB4DCBD0AFCboAaAwQQ8AhQl6AChM0ANAYYIeAAoT9ABQmKAHgMIEPQAUVra9\nbrXK2uumVX/T2DhlzXBD658btptoV9wIFXy1Zcl6zXYODvp3bW9Eu46Pslaz4XF/6912L2utunDz\nne6ZccyaFJfgL3/S5Ndaa0vYajbtH3bPbObTaNfroIlufvEs2rU5zT7j7pVb3TP7F9+Ido3Bb5Y0\n3rXW2rw5i+Y2m/6zMW5gDM647Xf4Xu2NHgAKE/QAUJigB4DCBD0AFCboAaAwQQ8AhQl6AChM0ANA\nYYIeAAoT9ABQmKAHgMIEPQAUVrbUZg7nlrH/v09a0jEEhTHjkP1kc3hBlrm/vGEM2yyW4HokRSet\ntba6eD2a2zz5vHtmOc7KTs6e9RfvHLxxJ9rVgjKcVVhqM4fvF3NwL06Hl6NdZ0k50Dp7NjfHz6O5\n8fhF98zqjf7SrtZam1b9321ZskNnGLOSsNXObrAsWhW14axWWVnPefBGDwCFCXoAKEzQA0Bhgh4A\nChP0AFCYoAeAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGGCHgAKE/QAUFjZ9rqTzSaam7b97U7DNmtp\nmqb+6qS0bGloWdNYG/q/W9palXy7YdyJNk17F6K5dhDMBS1jrbW2HPW317U3b0e72tL/n3+bbWpj\nOJmUmp1ssibFs7H/HJh2g/a01tpqzs6qIWmJXLJrH50fST1na21aZQ17Uf1l3HPabx1+rfPgjR4A\nChP0AFCYoAeAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0AFFa21Ga1yspO\nhqG/vCHsbmhzUKiQltqMQ/ifLvpy4a45uR7hFVntRWPD4dXumb1VVii0bE+6Z85O+mdaa229f7F7\nJr32c1jiktTTzOHtcfT8qHvm4OhltGt3LzuGp73+M24as2dzGoPPGJ45c3AO/Hmuv7BnCe/haex/\npqfvMG690QNAYYIeAAoT9ABQmKAHgMIEPQAUJugBoDBBDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeA\nwgQ9ABRWtr1uZ2c3mlut+y/JMCS9Wq0tSzaXGKLur9aW5dtrlAuKA9u4pO1T0VhSsNfOXmeNcmeb\nV90zq4efRbt23/tF98y4PYt2bcP3i6RIcZmzz3jhQn+74ar1NwC21tryuv93bq217aOvumfmC9ej\nXe3a7e6R5OxorbUlaPVsrUXVnmNy6LTW2pDkRNbaeB680QNAYYIeAAoT9ABQmKAHgMIEPQAUJugB\noDBBDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeAwgQ9ABRWtr1uSKquWtq8ljXDDUP//6zwa7V5GzZC\nfXsFe20Z+2/HeTmNdp188yiaO/7q8/6hzeto1+5ef4PaEDYiLtugYW8Mn7Elba/rnxuXrL3u2XH/\n3M5pdj0Owut4etR/D89PH0a7hos3umfGMX2PzK7HmNwfwZnzZ/2fcQ4+33nxRg8AhQl6AChM0ANA\nYYIeAAoT9ABQmKAHgMIEPQAUJugBoDBBDwCFCXoAKEzQA0Bhgh4ACitbarOExQiJIfy/tASNMfOc\nldMsyzaaiyp+wpKOpfV/t7Sr5/l2iuYeHG+6Z67u7ka7zpb+x/P0KCv5uRyUewxDVqCzWqXPS//c\nweGFaNeF773bPfPqwTra9fT5g2hu2D3onpn2Lme7gpNgNWTPWNyjFZTojGkxU1BQsw0Lp86DN3oA\nKEzQA0Bhgh4AChP0AFCYoAeAwgQ9ABQm6AGgMEEPAIUJegAoTNADQGGCHgAKE/QAUJigB4DCyrbX\nDWEHUlBKFLXQtdba8i22GQ1D2OaXfMY5vB7BR5x29qJd1++8F821qf+ROXr6MFu1u98988btd6Jd\nc3APj+Htmz4v46r/Bkka71pr7d69/va617e+F+06fnUcza1W/W15u2GT4mrsb6Ibgza51lpr6VkV\nHN7hURXdw9P03b1Xe6MHgMIEPQAUJugBoDBBDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeAwgQ9ABQm\n6AGgMEEPAIWVLbWZ5204FxRnhCUM0VTY9zAmbT2ttSVofZiXOdo1Bl8u/V6rgwvR3MH3f9Q9c7L5\nfrRrmvqLRPZW/TOttXa2OesfCgtBhjG7iee5/75Ki1XmedM9s7eXFSwdHhxGc/O2/4ybt/3f68++\nxQKudDA4d9LzowX38LLNzsXz4I0eAAoT9ABQmKAHgMIEPQAUJugBoDBBDwCFCXoAKEzQA0Bhgh4A\nChP0AFCYoAeAwgQ9ABQm6AGgsGFZvr1WIgDg2+WNHgAKE/QAUJigB4DCBD0AFCboAaAwQQ8AhQl6\nAChM0ANAYYIeAAoT9ABQmKAHgMIEPQAUJugBoDBBDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeAwgQ9\nABQm6AGgMEEPAIUJegAoTNADQGGCHgAKE/QAUJigB4DCBD0AFCboAaAwQQ8AhQl6AChM0ANAYYIe\nAAoT9ABQmKAHgMIEPQAUJugBoDBBDwCFCXoAKEzQA0Bhgh4AChP0AFCYoAeAwgQ9ABQm6AGgMEEP\nAIX9H0JjnKUpe5IrAAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f6681cf42b0>"
+       "<matplotlib.figure.Figure at 0x7fb06ccf4cf8>"
       ]
      },
      "metadata": {
@@ -174,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -220,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 93,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -280,25 +273,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 94,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'cifar10_dataset_folder_path' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-29-2e43b03e04f3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \"\"\"\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Preprocess Training, Validation, and Testing Data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mhelper\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpreprocess_and_save_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcifar10_dataset_folder_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnormalize\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mone_hot_encode\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'cifar10_dataset_folder_path' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "DON'T MODIFY ANYTHING IN THIS CELL\n",
